--- a/index.html
+++ b/index.html
@@ -17,19 +17,29 @@
       <form action="" method="post" class="add-toy-form">
         <h3>Create a toy!</h3>
 
-        <input type="text" name="name" value="" placeholder="Enter a toy's name..." class="input-text"/><br />
-        <input type="text" name="image" value="" placeholder="Enter a toy's image URL..." class="input-text"/><br/>
+        <input
+          type="text"
+          name="name"
+          value=""
+          placeholder="Enter a toy's name..."
+          class="input-text"
+        /><br />
+        <input
+          type="text"
+          name="image"
+          value=""
+          placeholder="Enter a toy's image URL..."
+          class="input-text"
+        /><br />
         <input type="submit" name="submit" value="Create Toy" class="submit" />
       </form>
     </div>
-    <p style="text-align:center">
+
+    <p style="text-align: center">
       Andy needs your help! <button id="new-toy-btn">Add a new toy!</button>
     </p>
 
-    <div id="toy-collection">
-
-
-    </div>
+    <div id="toy-collection"> </div>
     <script type="text/javascript" src="./index.js"></script>
   </body>
 </html>
